// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Voice State Update > should add data to the tree 1`] = `
{
  "MUTED": [
    {
      "ioc": {},
      "options": {
        "changes": [
          "MUTED",
        ],
        "event": "VOICE_STATE_UPDATE",
      },
    },
  ],
}
`;

exports[`Voice State Update > should add data to the tree 2`] = `
{
  "JOINED": [
    {
      "ioc": {},
      "options": {
        "changes": [
          "MUTED",
          "JOINED",
        ],
        "event": "VOICE_STATE_UPDATE",
      },
    },
  ],
  "MUTED": [
    {
      "ioc": {},
      "options": {
        "changes": [
          "MUTED",
        ],
        "event": "VOICE_STATE_UPDATE",
      },
    },
    {
      "ioc": {},
      "options": {
        "changes": [
          "MUTED",
          "JOINED",
        ],
        "event": "VOICE_STATE_UPDATE",
      },
    },
  ],
}
`;

exports[`Voice State Update > should extract information from multiple events 1`] = `
[
  {
    "handlerKeys": [
      "MUTED",
    ],
    "isDirectMessage": false,
  },
  {
    "handlerKeys": [
      "JOINED",
    ],
    "isDirectMessage": false,
  },
]
`;

exports[`Voice State Update > should extract information from mute events 1`] = `
[
  {
    "handlerKeys": [
      "MUTED",
    ],
    "isDirectMessage": false,
  },
]
`;
